# fem2d

./: Example_sensitivity.ipynb  Example_solvers.ipynb  Examples.ipynb  ExamplesInital.py  README.md  fem1d.py  pyproject.toml
fem2d/: Elements4Node.py  Elements8Node.py  Meshers.py  Postprocessing.py  Sensitivity.py  Solvers.py  elements4Node.py  postprocessing.py  sensitivity.py  solvers.py
